# FastAPIZero

./: .coverage  Anotações.txt  README.md  pyproject.toml
fastapi_zero/: app.py
tests/: test_app.py
